--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
-    "name": "Pikachu",
-    "description": "Pikachu - Whatsapp Bot",
+    "name": "catbot",
+    "description": "catbot - Whatsapp Bot",
     "logo": "https://i.imgur.com/W0i7oMY.jpeg",
     "keywords": ["whatsapp", "userbot", "Asena", "WhatsAsena", "bot", "api", "ai"],
-    "repository": "https://github.com/ameer-kallumthodi/pikachu",
+    "repository": "https://github.com/Itsmebasil0/catbot",
     "website":   "https://t.me/phaticusthiccy",
     "success_url": "https://t.me/AsenaSupport",
     "stack": "container",
     "env": {
-        "CONNECTION_CODE": {
+        "CATBOT_CODE": {
             "description": "Asena session changed! Type your Pikachu code here.",
             "required": true
         },
