--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "catbot",
+    "name": "CATBOT",
     "description": "catbot - Whatsapp Bot",
-    "logo": "https://i.imgur.com/W0i7oMY.jpeg",
+    "logo": "https://i.imgur.com/HBlOhMc.png",
     "keywords": ["whatsapp", "userbot", "Asena", "WhatsAsena", "bot", "api", "ai"],
     "repository": "https://github.com/Itsmebasil0/catbot",
     "website":   "https://t.me/phaticusthiccy",
