--- a/whatsasena/Dockerfile
+++ b/whatsasena/Dockerfile
@@ -1,1 +1,10 @@
+FROM fusuf/whatsasena:latest
+
+RUN git clone https://github.com/itsmebasil0/catbot /root/WhatsAsenaDuplicated
+WORKDIR /root/WhatsAsenaDuplicated/
+ENV TZ=Europe/Istanbul
+RUN npm install supervisor -g
+RUN yarn install --no-audit
+
+CMD ["node", "bot.js"]
 
